@@ -3649,6 +3649,8 @@ STR_6392    :Could not find {STRING} at this path.
 STR_6393    :Objective Selection
 STR_6394    :Objective
 STR_6395    :Maintenance
+STR_6396    :Disable screensaver and monitor power saving
+STR_6397    :{SMALLFONT}{BLACK}If checked, screensaver and other monitor power saving features will be inhibited while OpenRCT2 is running.
 
 #############
 # Scenarios #
