@@ -669,6 +669,8 @@ private:
             SDLException::Throw("SDL_CreateWindow(...)");
         }
 
+        ApplyScreenSaverLockSetting();
+
         SDL_SetWindowMinimumSize(_window, 720, 480);
         SetCursorTrap(gConfigGeneral.trap_cursor);
         _platformUiContext->SetWindowIcon(_window);
