@@ -13,3 +13,4 @@
 #include <openrct2/interface/Window_internal.h>
 
 void window_all_wheel_input();
+void ApplyScreenSaverLockSetting();
