@@ -88,6 +88,7 @@ enum WINDOW_OPTIONS_WIDGET_IDX {
     WIDX_MULTITHREADING_CHECKBOX,
     WIDX_USE_VSYNC_CHECKBOX,
     WIDX_MINIMIZE_FOCUS_LOSS,
+    WIDX_DISABLE_SCREENSAVER_LOCK,
 
     // Rendering
     WIDX_RENDERING_GROUP = WIDX_PAGE_START,
@@ -205,7 +206,7 @@ static constexpr const int32_t WH = 332;
 
 static rct_widget window_options_display_widgets[] = {
     MAIN_OPTIONS_WIDGETS,
-    MakeWidget        ({  5,  53}, {300, 155}, WWT_GROUPBOX, WindowColour::Secondary, STR_HARDWARE_GROUP                                                              ), // Hardware group
+    MakeWidget        ({  5,  53}, {300, 170}, WWT_GROUPBOX, WindowColour::Secondary, STR_HARDWARE_GROUP                                                              ), // Hardware group
     MakeWidget        ({155,  68}, {145,  12}, WWT_DROPDOWN, WindowColour::Secondary                                                                                  ), // Fullscreen
     MakeWidget        ({288,  69}, { 11,  10}, WWT_BUTTON,   WindowColour::Secondary, STR_DROPDOWN_GLYPH,                    STR_FULLSCREEN_MODE_TIP                  ),
     MakeWidget        ({155,  83}, {145,  12}, WWT_DROPDOWN, WindowColour::Secondary, STR_ARG_16_RESOLUTION_X_BY_Y                                                    ), // Resolution
@@ -221,6 +222,7 @@ static rct_widget window_options_display_widgets[] = {
     MakeWidget        ({155, 176}, {136,  12}, WWT_CHECKBOX, WindowColour::Secondary, STR_MULTITHREADING,                    STR_MULTITHREADING_TIP                   ), // Multithreading
     MakeWidget        ({ 11, 176}, {143,  12}, WWT_CHECKBOX, WindowColour::Secondary, STR_USE_VSYNC,                         STR_USE_VSYNC_TIP                        ), // Use vsync
     MakeWidget        ({ 11, 191}, {280,  12}, WWT_CHECKBOX, WindowColour::Secondary, STR_MINIMISE_FULLSCREEN_ON_FOCUS_LOSS, STR_MINIMISE_FULLSCREEN_ON_FOCUS_LOSS_TIP), // Minimise fullscreen focus loss
+    MakeWidget        ({ 11, 206}, {280,  12}, WWT_CHECKBOX, WindowColour::Secondary, STR_DISABLE_SCREENSAVER,               STR_DISABLE_SCREENSAVER_TIP              ), // Disable screensaver
     { WIDGETS_END },
 };
 
@@ -449,6 +451,7 @@ static uint64_t window_options_page_enabled_widgets[] = {
     (1 << WIDX_MULTITHREADING_CHECKBOX) |
     (1 << WIDX_MINIMIZE_FOCUS_LOSS) |
     (1 << WIDX_STEAM_OVERLAY_PAUSE) |
+    (1 << WIDX_DISABLE_SCREENSAVER_LOCK) |
     (1 << WIDX_SCALE) |
     (1 << WIDX_SCALE_UP) |
     (1 << WIDX_SCALE_DOWN) |
@@ -633,6 +636,12 @@ static void window_options_display_mouseup(rct_window* w, rct_widgetindex widget
             break;
         case WIDX_STEAM_OVERLAY_PAUSE:
             gConfigGeneral.steam_overlay_pause ^= 1;
+            config_save_default();
+            w->Invalidate();
+            break;
+        case WIDX_DISABLE_SCREENSAVER_LOCK:
+            gConfigGeneral.disable_screensaver ^= 1;
+            ApplyScreenSaverLockSetting();
             config_save_default();
             w->Invalidate();
             break;
@@ -857,6 +866,7 @@ static void window_options_display_invalidate(rct_window* w)
     widget_set_checkbox_value(w, WIDX_MULTITHREADING_CHECKBOX, gConfigGeneral.multithreading);
     widget_set_checkbox_value(w, WIDX_MINIMIZE_FOCUS_LOSS, gConfigGeneral.minimize_fullscreen_focus_loss);
     widget_set_checkbox_value(w, WIDX_STEAM_OVERLAY_PAUSE, gConfigGeneral.steam_overlay_pause);
+    widget_set_checkbox_value(w, WIDX_DISABLE_SCREENSAVER_LOCK, gConfigGeneral.disable_screensaver);
 
     // Dropdown captions for straightforward strings.
     window_options_display_widgets[WIDX_FULLSCREEN].text = window_options_fullscreen_mode_names[gConfigGeneral.fullscreen_mode];
